cambios: boton de limpiar, y pasa de un lado a ootro el string

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <h1>Encriptador</h1>
     </header>
     <main>
-        <textarea  id="text" cols="30" rows="10"></textarea>
-        <div class="button">
-            <button onclick="Hola('Fernado')">Encriptar</button>
-            <button class="desc">Desencriptar</button>
-        </div>
+        <textarea  id="entrada" ></textarea>
         
+        <button onclick="encriptador()">Encriptador</button>
+        <button onclick="limpiar()">Limpiar</button>
+        <button onclick="">Desencriptador</button>
+        <textarea id="resultado"></textarea>
         
     </main>
     <footer>
