arreglado temas nuevos acerca de el textop

--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 </body>
 <script>
     var btn = document.querySelector("#botonEncriptado");
-    btn.onclick() = encriptar();
+    btn.onclick = encriptar;
 </script>
 </html>
